Styles updated to prevent overflow

--- a/src/containers/ItemDetail/ItemDetail.scss
+++ b/src/containers/ItemDetail/ItemDetail.scss
@@ -51,6 +51,19 @@
             background: rgba(240, 84, 84, 0.35);
         }
     }
+    @media screen and (max-width: 480px) {
+        h1 {
+            font-size: 30px;
+        }
+
+        p {
+            font-size: 16px;
+        }
+
+        img {
+            max-height: 50vh;
+        }
+    }
 }
 
 @media screen and (min-width: 768px) {
