--- a/src/containers/MenuSec/MenuSec.scss
+++ b/src/containers/MenuSec/MenuSec.scss
@@ -14,8 +14,8 @@
     inset: 0;
 
     img {
-        width: 491px;;
-        height: 515px;
+        width: 100%;;
+        height: auto;
         z-index: 0;
     }
 }
@@ -53,7 +53,7 @@
 
     img {
         width: auto;
-        height: 910px;
+        height: 100vh;
         z-index: 1;
     }
 }
